[project]
name = "llm-sdk"
version = "0.1.0"
description = "LLM SDK for local model inference"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.60.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_sdk"]

[tool.mypy]
exclude = ["llm_sdk", "\\.venv"]

[[tool.mypy.overrides]]
module = "llm_sdk"
follow_imports = "silent"

[[tool.mypy.overrides]]
module = "pydantic"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.models"
ignore_errors = true
